--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  
 <head>
-        <title>龙蛋传说</title>
+        <title>兴安盟</title>
          
 <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
     
